--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,8 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-### IntelliJ IDEA ###
 .idea
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/dbnavigator.xml
 *.iws
 *.iml
 *.ipr
