Added docker configuration. Problems to start app with docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,14 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - .:/docker-entrypoint-initdb.d
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
       - ./pgdata:/var/lib/postgresql
+
+  app:
+    container_name: app
+    image: app
+    build: .
+    depends_on:
+      - db
+    ports:
+      - "8081:8081"
