--- a/pom.xml
+++ b/pom.xml
@@ -3,22 +3,15 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.specificgroup</groupId>
   <artifactId>crud-app</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>crud-app Maven Webapp</name>
+  <name>crud-app</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <json.simple.version>1.3</json.simple.version>
-    <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
-    <maven.surefire.plugin>3.0.0-M5</maven.surefire.plugin>
-    <maven.clean.plugin>3.1.0</maven.clean.plugin>
-    <maven.jar.plugin>3.2.0</maven.jar.plugin>
-    <maven.assembly.plugin>3.3.0</maven.assembly.plugin>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <maven.dependency.plugin>3.2.0</maven.dependency.plugin>
   </properties>
 
   <dependencies>
@@ -32,7 +25,7 @@
     <dependency>
       <groupId>com.github.akarazhev</groupId>
       <artifactId>json-simple</artifactId>
-      <version>${json.simple.version}</version>
+      <version>1.3</version>
     </dependency>
 
     <dependency>
@@ -48,41 +41,68 @@
       <version>2.17.1</version>
     </dependency>
   </dependencies>
+
   <build>
-    <finalName>crud-app</finalName>
+
     <plugins>
+
+<!--      <plugin>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-dependency-plugin</artifactId>-->
+<!--        <version>3.2.0</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <id>copy-dependencies</id>-->
+<!--            <phase>prepare-package</phase>-->
+<!--            <goals>-->
+<!--              <goal>copy-dependencies</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <outputDirectory>${project.build.directory}/libs</outputDirectory>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>${maven.clean.plugin}</version>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>libs/</classpathPrefix>
+              <mainClass>com.specificgroup.crud_app.CrudApplication</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven.compiler.plugin}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven.surefire.plugin}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>${maven.dependency.plugin}</version>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>libs/</classpathPrefix>
+              <mainClass>com.specificgroup.crud_app.CrudApplication</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
         <executions>
           <execution>
-            <id>copy-dependencies</id>
-            <phase>prepare-package</phase>
+            <id>lib</id>
+            <phase>package</phase>
             <goals>
-              <goal>copy-dependencies</goal>
+              <goal>single</goal>
             </goals>
-            <configuration>
-              <outputDirectory>${project.build.directory}/libs</outputDirectory>
-            </configuration>
           </execution>
         </executions>
       </plugin>
     </plugins>
   </build>
+
 </project>
