--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:postgresql://localhost:5432/crudappdb
+db.url=jdbc:postgresql://crud-db:5432/crudappdb
 db.username=postgres
 db.password=password
 db.pool=5
