--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
     </dependency>
 
     <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.8.2</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>com.github.akarazhev</groupId>
       <artifactId>json-simple</artifactId>
       <version>1.3</version>
@@ -32,6 +39,13 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>42.3.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.1.0</version>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
