--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,19 @@
     </dependency>
 
     <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>1.16.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>1.16.2</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>com.github.akarazhev</groupId>
       <artifactId>json-simple</artifactId>
       <version>1.3</version>
